--- a/src/components/home/Links.astro
+++ b/src/components/home/Links.astro
@@ -1,7 +1,5 @@
 ---
-import { SiMyanimelist } from "react-icons/si";
-import { FaGithub, FaLinkedin, FaXTwitter, FaInstagram, FaEnvelope } from "react-icons/fa6";
-import Bsky from "@/assets/bluesky.svg"
+import { FaGithub, FaLinkedin, FaXTwitter, FaEnvelope } from "react-icons/fa6";
 ---
 
 <a target="_blank" href="https://github.com/samisthefbi/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
