--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ const title = "Home | SamIsTheFBI"
         <li>
           <ProjectCard 
             title="MUNSOC NIT Agartala" 
-            description="Created the blog side of the website, all with a full fledged dashboard & text editor for authors & admins." 
+            description="Maintaining the official website of MUN club of NIT Agartala. Built a full-fledged blog+CMS for student blogs." 
             link="https://munsoc.in/"
             img={Munsoc}
           />
@@ -55,7 +55,7 @@ const title = "Home | SamIsTheFBI"
         <li>
           <ProjectCard 
             title="Stellar Minesite" 
-            description="Built an ML-driven that analyzes data on mining sites during ISRO Space Hackathon NIT Agartala." 
+            description="ML-driven webapp that analyzes data on mining sites. Built during ISRO Space Hackathon NIT Agartala." 
             link="https://stellar-minesite.vercel.app/"
             img={Stellarminesite}
           />
@@ -98,7 +98,7 @@ const title = "Home | SamIsTheFBI"
         <h2 class="text-3xl sm:text-6xl tracking-tighter font-bold text-primary dark:text-background">Shivam Shekhar Soy</h2>
         <p class="text-xl sm:text-3xl tracking-tighter font-bold text-primary dark:text-background">Fullstack Developer</p>
       </div>
-      <a class="group-hover:opacity-100 opacity-0 absolute bottom-3 uppercase transition-all text-xs sm:text-xl text-white translate-x-1/2 right-1/2 font-semibold" href="/resume.pdf">Download my resume</a>
+      <a class="group-hover:opacity-100 opacity-0 hover:underline absolute bottom-3 uppercase transition-all text-xs sm:text-xl text-white translate-x-1/2 right-1/2 font-semibold" href="/resume.pdf" target="_blank">Download my resume ↗</a>
     </div>
   </section>
 </Base>
