--- a/src/components/home/Links.astro
+++ b/src/components/home/Links.astro
@@ -4,15 +4,19 @@ import { FaGithub, FaLinkedin, FaXTwitter, FaEnvelope } from "react-icons/fa6";
 
 <a target="_blank" href="https://github.com/samisthefbi/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaGithub />
+  <span class="sr-only">Github Link</span>
 </a>
 <a target="_blank" href="https://www.linkedin.com/in/shivam-shekhar-soy/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaLinkedin />
+  <span class="sr-only">Linkedin Link</span>
 </a>
 <a target="_blank" href="https://twitter.com/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaXTwitter />
+  <span class="sr-only">Twitter/X Link</span>
 </a>
 <a target="_blank" href="mailto:shivamshekharsoy@gmail.com" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaEnvelope />
+  <span class="sr-only">Email address</span>
 </a>
 <!-- 
 <a target="_blank" href="https://www.instagram.com/samisthefbi/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
