--- a/src/components/home/Links.astro
+++ b/src/components/home/Links.astro
@@ -1,5 +1,6 @@
 ---
 import { FaGithub, FaLinkedin, FaXTwitter, FaEnvelope } from "react-icons/fa6";
+import { SiMyanimelist } from "react-icons/si";
 ---
 
 <a target="_blank" href="https://github.com/samisthefbi/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
@@ -18,11 +19,11 @@ import { FaGithub, FaLinkedin, FaXTwitter, FaEnvelope } from "react-icons/fa6";
   <FaEnvelope />
   <span class="sr-only">Email address</span>
 </a>
+<a target="_blank" href="https://myanimelist.net/profile/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
+  <SiMyanimelist />
+</a>
 <!-- 
 <a target="_blank" href="https://www.instagram.com/samisthefbi/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaInstagram />
-</a>
-<a target="_blank" href="https://myanimelist.net/profile/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
-  <SiMyanimelist />
 </a>
 -->
