--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -6,7 +6,7 @@ import Links from "@/components/home/Links.astro"
   <div class="max-w-2xl w-full mx-auto px-4 flex h-20 items-center justify-between">
     <div class="flex gap-6 md:gap-10">
       <a href="/" class="flex items-center space-x-2">
-        <span class="inline-block font-normal text-muted-foreground">Shivam Shekhar Soy</span>
+        <span class="inline-block font-bold tracking-tighter text-muted-foreground">Shivam.</span>
       </a>
     </div>
     <div class="flex gap-2 text-lg">
