view transitions, selection color and anime page init

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -21,14 +21,14 @@ const { title, description, image } = Astro.props
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		
 		<title>{title}</title>
-    <meta name="title" content="Title of this page" />
-		<meta name="description" content="My fancy index page" />
+    <meta name="title" content={title} />
+    <meta name="description" content={description} />
 		<meta name="author" content="Shivam Shekhar Soy, SamIsTheFBI" />
 
-		<meta property="og:title" content="SamIsTheFBI's index page" />
+    <meta property="og:title" content={title} />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://samisthefbi.github.io/" />
-		<meta property="og:description" content="My fancy index page" />
+    <meta property="og:description" content={description} />
     <meta property="og:image" content={image} />
 
     <meta property="twitter:card" content="summary_large_image" />
