--- a/src/pages/uses/index.astro
+++ b/src/pages/uses/index.astro
@@ -7,8 +7,8 @@ const title = "Uses | SamIsTheFBI"
 <Base title={title} description="Fancy home page">
   <section class="space-y-6 mb-6">
     <div>
-      <h1 class="text-2xl sm:text-4xl font-semibold tracking-tighter">Uses</h1>
-      <p class="max-md:text-sm text-muted-foreground">Tech that I use.</p>
+      <h1 transition:name="uses_title" class="text-2xl sm:text-4xl font-semibold tracking-tighter">Uses</h1>
+      <p class="max-md:text-sm text-muted-foreground">tech that i use.</p>
     </div>
   </section>
   <section class="space-y-6">
@@ -27,7 +27,7 @@ const title = "Uses | SamIsTheFBI"
           games on it.
         </li>
         <li>
-          I gave in to IEMs and currently use <a href="https://conceptkart.com/products/kz-edx-pro-wired-iem?variant=39421778788426" class="link">KZ EDX Pro</a>. I needed a long-lasting and an L-shaped 3.5mm jack. I get all of this at price cheaper than TWS earbuds. Sound quality is great but I really don&apos;t mind since my lifestyle doesn&apos;t allow me easy access to lossless audio.
+          I gave in to IEMs and currently use <a href="https://conceptkart.com/products/kz-edx-pro-wired-iem?variant=39421778788426" class="link">KZ EDX Pro</a>. They sound great but I really wouldn&apos;t care if it wasn&apos;t the case since my lifestyle doesn&apos;t allow me easy access to lossless good quality audio.
         </li>
       </ul>
     </div>
