--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -41,7 +41,8 @@ const title = "About | SamIsTheFBI"
       this much, thank you for visiting this corner of internet.
     </p>
     <ul>
-      <li class="list-disc list-inside underline underline-offset-4 hover:font-semibold"><a href="/uses">Tech I Use</a></li>
+      <li transition:name="uses_title" class="list-disc list-inside underline underline-offset-4 hover:font-semibold"><a href="/uses">Tech I Use</a></li>
+      <li transition:name="anime_title" class="hidden list-disc list-inside underline underline-offset-4 hover:font-semibold"><a href="/anime">Anime</a></li>
     </ul>
   </section>
 </Base>
