--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -17,7 +17,7 @@ const { title, description, image } = Astro.props
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, viewport-fit=cover">
 	  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -65,6 +65,10 @@ const { title, description, image } = Astro.props
     setTheme(document)
     document.addEventListener('astro:before-swap', ev => {
       setTheme(ev.newDocument)
+    });
+
+    window.addEventListener('scroll', () => {
+      document.body.style.height = `${window.innerHeight}px`;
     });
 
   </script>
