--- a/src/components/home/Links.astro
+++ b/src/components/home/Links.astro
@@ -3,6 +3,7 @@ import { FaGithub, FaLinkedin, FaXTwitter, FaEnvelope } from "react-icons/fa6";
 import { SiMyanimelist } from "react-icons/si";
 ---
 
+<span class="sr-only">Here are links for</span>
 <a target="_blank" href="https://github.com/samisthefbi/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaGithub />
   <span class="sr-only">Github Link</span>
@@ -21,6 +22,7 @@ import { SiMyanimelist } from "react-icons/si";
 </a>
 <a target="_blank" href="https://myanimelist.net/profile/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <SiMyanimelist />
+  <span class="sr-only">MyAnimeList</span>
 </a>
 <!-- 
 <a target="_blank" href="https://www.instagram.com/samisthefbi/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
