--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -73,7 +73,7 @@ const { title, description, image } = Astro.props
 
   </script>
   <body class="min-h-screen max-h-full bg-background">
-    <Header />
+    <!--<Header />-->
     <main class="flex main-height">
       <div class="mx-auto max-w-2xl p-4">
         <slot />
