--- a/src/pages/anime/index.astro
+++ b/src/pages/anime/index.astro
@@ -1,5 +1,6 @@
 ---
 import Base from "@/layouts/Base.astro"
+import ComboboxDemo from "@/components/combobox.tsx"
 
 const title = "Anime | SamIsTheFBI"
 ---
@@ -11,11 +12,12 @@ const title = "Anime | SamIsTheFBI"
   </section>
   <section class="space-y-6 pt-6">
     <p class="text-pretty">
-      I have watched anime since childhood thanks to Animax still alive on Indian TVs at the time. I can&apos;t remember my first anime but Idaten Jump & Eureka Seven AO were some of the first few ones I was very fond of, even though I missed the ending of the former and almost half of the latter. There was Doraemon, Shinchan, Kochikame and whatnot before that but I didn&apos;t know cartoon from anime that time. With no IRL friends to talk about it, I used to be very active on Facebook for anime discussion, shitposts and news. Since then I&apos;ve liked all kinds of anime, but I still cannot see how to enjoy sports anime.
+    I have watched anime since childhood thanks to Animax still alive on Indian TVs at the time. I can&apos;t remember my first anime but Idaten Jump & Eureka Seven AO were some of the first few ones I was very fond of, even though I missed the ending of the former and almost half of the latter. There was Doraemon, Shinchan, Kochikame and whatnot before that but I didn&apos;t know cartoon from anime that time. With no IRL friends to talk about it, I used to be very active on Facebook for anime discussion, shitposts and news. Since then I&apos;ve liked all kinds of anime, but I still cannot see how to enjoy sports anime. I will be listing some which I think are awesome.
     </p>
-    <p class="text-pretty">
-      I will be listing some which I think are awesome.
-    </p>
+  </section>
+  <section class="pt-6 space-y-6">
+    <ComboboxDemo client:only="react" />
+    <div class="border border-border w-fit p-6">Monogatari Series</div>
   </section>
 </Base>
 
