--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,8 @@ const title = "Home | SamIsTheFBI"
     <p>
       Beyond my studies, I enjoy participating in hackathons and working on various projects. In my free time, I also like tweaking my linux, watching movies, or playing video games.
     </p>
-    <div class="space-y-4">
+  </section>
+  <section class="mt-8 space-y-4">
       <div>
         <h3 class="font-semibold text-lg sm:text-xl">Projects</h3>
         <p class="max-md:text-sm text-muted-foreground">a glimpse what I can build.</p>
@@ -77,9 +78,8 @@ const title = "Home | SamIsTheFBI"
           />
         </li>
       </ul>
-    </div>
   </section>
-  <section class="mt-5 space-y-4">
+  <section class="mt-8 space-y-4">
     <div>
       <h2 class="text-lg sm:text-xl font-semibold">Hire me</h2>
       <p class="max-md:text-sm text-muted-foreground">if you need a skilled developer.</p>
