--- a/src/pages/uses/index.astro
+++ b/src/pages/uses/index.astro
@@ -5,15 +5,13 @@ const title = "Uses | SamIsTheFBI"
 ---
 
 <Base title={title} description="Fancy home page">
-  <section class="space-y-6 mb-6">
-    <div>
-      <h1 transition:name="uses_title" class="text-2xl sm:text-4xl font-semibold tracking-tighter">Uses</h1>
-      <p class="max-md:text-sm text-muted-foreground">tech that i use.</p>
-    </div>
+  <section class="sm:mt-5">
+    <h2 transition:name="uses_title" class="text-xl sm:text-2xl font-semibold tracking-tighter opacity-95">Uses</h2>
+    <p class="max-md:text-sm text-muted-foreground">tech that i use.</p>
   </section>
-  <section class="space-y-6">
+  <section class="space-y-6 pt-6">
     <div class="space-y-2">
-      <h1 class="text-lg sm:text-2xl font-semibold tracking-tighter">Gear</h1>
+      <h2 class="text-lg sm:text-xl font-semibold tracking-tighter">Gear</h2>
       <ul class="list-disc list-outside ml-4">
         <li>
           For my laptop, I use <a href="https://www.amazon.in/HP-15-6-inches-Micro-Edge-Anti-Glare-15s-eq2182AU/dp/B0B4N77Y34" class="link">HP 15s-eq2182AU</a> (16GB RAM + 512GB SSD). It&apos;s
@@ -32,7 +30,7 @@ const title = "Uses | SamIsTheFBI"
       </ul>
     </div>
     <div class="space-y-2">
-      <h1 class="text-lg sm:text-2xl font-semibold tracking-tighter">Laptop Software</h1>
+      <h2 class="text-lg sm:text-xl font-semibold tracking-tighter">Laptop Software</h2>
       <ul class="list-disc list-outside ml-4">
         <li><b>OS</b>: Arch Linux + Windows 11</li>
         <li><b>Window Manager</b>: dwm (patched a lot)</li>
@@ -43,7 +41,7 @@ const title = "Uses | SamIsTheFBI"
       </ul>
     </div>
     <div class="space-y-2">
-      <h1 class="text-lg sm:text-2xl font-semibold tracking-tighter">Phone Software</h1>
+      <h2 class="text-lg sm:text-xl font-semibold tracking-tighter">Phone Software</h2>
       <ul class="list-disc list-outside ml-4">
         <li><b>OS</b>: Android 10 / MIUI 11.0.4</li>
         <li><b>Launcher</b>: OLauncher</li>
@@ -54,7 +52,7 @@ const title = "Uses | SamIsTheFBI"
       </ul>
     </div>
     <div class="space-y-2">
-      <h1 class="text-lg sm:text-2xl font-semibold tracking-tighter">This Website</h1>
+      <h2 class="text-lg sm:text-xl font-semibold tracking-tighter">This Website</h2>
       <ul class="list-disc list-outside ml-4">
         <li><b>Framework</b>: Astro</li>
         <li><b>Font Face</b>: Inter</li>
