--- a/src/pages/extras/index.astro
+++ b/src/pages/extras/index.astro
@@ -99,7 +99,7 @@ import { ViewTransitions, fade } from "astro:transitions"
 
   </script>
   <body class="min-h-screen max-h-full bg-background">
-    <Header />
+    <!--<Header />-->
     <main class="main-height p-2 max-w-7xl mx-auto" transition:name="weeb">
     <h1 class="text-2xl tracking-tight text-center text-muted-foreground">a few illustrations I recently liked.</h1>
     <center id="loading-text"><samp id="loading-text-actual">Loading...</samp></center>
