--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -9,12 +9,12 @@ const title = "About | SamIsTheFBI"
     <h2 class="text-xl sm:text-2xl font-semibold tracking-tighter opacity-95">About me</h2>
     <p class="max-md:text-sm text-muted-foreground">Programmer. Artist. <a href="/extras" class="" transition:name="weeb">Certified Weeb.</a></p>
   </section>
-  <section class="space-y-6 pt-6">
+  <section class="space-y-4 pt-6">
     <h1 class="text-3xl sm:text-4xl font-semibold tracking-tighter text-pretty">
       I&apos;m <span transition:name="my_name">Shivam Shekhar Soy</span>. I&apos;m a programmer & artist.
     </h1>
     <p class="text-pretty">
-      That's what I'm telling people now. There are a lot of things I am interested in. I excel in some, others I just can't stop gushing over and only hoping to be good at!
+      Or at least that's what I'm telling people now. There are a lot of things I am interested in. I excel in some, others I just can't stop obsessing over and only hoping to be good at!
     </p>
     <h2 class="text-xl sm:text-2xl font-semibold tracking-tighter opacity-95">Computers & me</h2>
     <p class="">
@@ -42,7 +42,7 @@ const title = "About | SamIsTheFBI"
     </p>
     <ul>
       <li transition:name="uses_title" class="list-disc list-inside underline underline-offset-4 hover:font-semibold"><a href="/uses">Tech I Use</a></li>
-      <li transition:name="anime_title" class="hidden list-disc list-inside underline underline-offset-4 hover:font-semibold"><a href="/anime">Anime</a></li>
+      <li transition:name="anime_title" class="list-disc list-inside underline underline-offset-4 hover:font-semibold"><a href="/anime">Anime</a></li>
     </ul>
   </section>
 </Base>
