--- a/src/pages/anime/index.astro
+++ b/src/pages/anime/index.astro
@@ -1,6 +1,13 @@
 ---
 import Base from "@/layouts/Base.astro"
-import ComboboxDemo from "@/components/combobox.tsx"
+import AnimeCard from "@/components/anime/AnimeCard.astro"
+import Monogatari from "@/assets/anime/monogatari.png"
+import Flcl from "@/assets/anime/flcl.jpg"
+import Drrr from "@/assets/anime/drrr.jpg"
+import Paprika from "@/assets/anime/paprika.jpg"
+import Nichijou from "@/assets/anime/nichijou.jpg"
+import Steinsgate from "@/assets/anime/steinsgate.jpg"
+import Evangelion from "@/assets/anime/evangelion.jpg"
 
 const title = "Anime | SamIsTheFBI"
 ---
@@ -12,12 +19,17 @@ const title = "Anime | SamIsTheFBI"
   </section>
   <section class="space-y-6 pt-6">
     <p class="text-pretty">
-    I have watched anime since childhood thanks to Animax still alive on Indian TVs at the time. I can&apos;t remember my first anime but Idaten Jump & Eureka Seven AO were some of the first few ones I was very fond of, even though I missed the ending of the former and almost half of the latter. There was Doraemon, Shinchan, Kochikame and whatnot before that but I didn&apos;t know cartoon from anime that time. With no IRL friends to talk about it, I used to be very active on Facebook for anime discussion, shitposts and news. Since then I&apos;ve liked all kinds of anime, but I still cannot see how to enjoy sports anime. I will be listing some which I think are awesome.
+    I have watched anime since childhood thanks to Animax still alive on Indian TVs at the time. I can&apos;t remember my first anime but Idaten Jump & Eureka Seven AO were some of the first few ones I was very fond of, even though I missed the ending of the former and almost half of the latter. There was Doraemon, Shinchan, Kochikame and whatnot before that but I didn&apos;t know cartoon from anime that time. With no IRL friends to talk about it, I used to be very active on Facebook for anime discussion, shitposts and news. Since then I&apos;ve liked all kinds of anime, but I still cannot see how to enjoy sports anime. Here are some anime series/movies which changed how I viewed this media.
     </p>
   </section>
-  <section class="pt-6 space-y-6">
-    <ComboboxDemo client:only="react" />
-    <div class="border border-border w-fit p-6">Monogatari Series</div>
+  <section class="pt-8 gap-6 grid sm:grid-cols-2">
+    <AnimeCard img={Monogatari} title="Monogatari Series" link="https://myanimelist.net/anime/5081/Bakemonogatari"/>
+    <AnimeCard img={Flcl} title="FLCL (2000)" link="https://myanimelist.net/anime/227/FLCL"/>
+    <AnimeCard img={Drrr} title="Durarara!!" link="https://myanimelist.net/anime/6746/Durarara"/>
+    <AnimeCard img={Paprika} title="Paprika" link="https://myanimelist.net/anime/1943/Paprika"/>
+    <AnimeCard img={Nichijou} title="Nichijou" link="https://myanimelist.net/anime/10165/Nichijou"/>
+    <AnimeCard img={Evangelion} title="Neon Genesis Evangelion" link="https://myanimelist.net/anime/30/Shinseiki_Evangelion"/>
+    <AnimeCard img={Steinsgate} title="Steins;Gate" link="https://myanimelist.net/anime/9253/Steins_Gate"/>
   </section>
 </Base>
 
