--- a/src/pages/extras/index.astro
+++ b/src/pages/extras/index.astro
@@ -100,7 +100,7 @@ import { ViewTransitions, fade } from "astro:transitions"
   </script>
   <body class="min-h-screen max-h-full bg-background">
     <!--<Header />-->
-    <main class="main-height p-2 max-w-7xl mx-auto" transition:name="weeb">
+    <main class="main-height p-2 max-w-7xl mx-auto pt-4 xl:pt-10" transition:name="weeb">
     <h1 class="text-2xl tracking-tight text-center text-muted-foreground">a few illustrations I recently liked.</h1>
     <center id="loading-text"><samp id="loading-text-actual">Loading...</samp></center>
     <div id="gallery" class="mt-5 columns-1 gap-2 lg:gap-3 sm:columns-2 lg:columns-3 xl:columns-4 [&>img:not(:first-child)]:mt-2 lg:[&>img:not(:first-child)]:mt-3">
