--- a/src/pages/extras/index.astro
+++ b/src/pages/extras/index.astro
@@ -98,7 +98,7 @@ import { ViewTransitions, fade } from "astro:transitions"
     setImages()
 
   </script>
-  <body class="min-h-screen max-h-full bg-background">
+  <body class="min-h-screen max-h-full bg-background mt-4">
     <!--<Header />-->
     <main class="main-height p-2 max-w-7xl mx-auto pt-4 xl:pt-10" transition:name="weeb">
     <h1 class="text-2xl tracking-tight text-center text-muted-foreground">a few illustrations I recently liked.</h1>
