--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -32,7 +32,7 @@ const { title, description, image } = Astro.props
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://samisthefbi.github.io/" />
     <meta property="og:description" content={description} />
-    <meta property="og:image" content={image} />
+    <meta property="og:image" content={image ?? '/og.png'} />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content={Astro.url} />
@@ -72,7 +72,7 @@ const { title, description, image } = Astro.props
     });
 
   </script>
-  <body class="min-h-screen max-h-full bg-background">
+  <body class="min-h-screen max-h-full bg-background mt-4">
     <!--<Header />-->
     <main class="flex main-height">
       <div class="mx-auto max-w-2xl p-4">
