--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -72,7 +72,7 @@ const { title, description, image } = Astro.props
     });
 
   </script>
-  <body class="min-h-screen max-h-full bg-background mt-4">
+  <body class="min-h-screen max-h-full bg-background pt-4 xl:pt-2">
     <!--<Header />-->
     <main class="flex main-height">
       <div class="mx-auto max-w-2xl p-4">
