movie review: chungking expres (1994)

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -75,7 +75,7 @@ const { title, description, image } = Astro.props
   <body class="min-h-screen max-h-full bg-background pt-4 xl:pt-2">
     <!--<Header />-->
     <main class="flex main-height">
-      <div class="mx-auto max-w-2xl p-4">
+      <div class="mx-auto max-w-2xl p-4 w-full dark:text-stone-50/90">
         <slot />
       </div>
     </main>
