--- a/src/pages/movies/index.astro
+++ b/src/pages/movies/index.astro
@@ -11,10 +11,16 @@ const title = "Movies | SamIsTheFBI"
   </section>
   <section class="space-y-6 pt-6">
     <p class="text-pretty">
-      TODO: Write about how grateful I am that cinema exists 
+      you know what, i'll actually write mini reviews of movies I watch
     </p>
   </section>
-  <section class="pt-8 gap-6 grid sm:grid-cols-2">
-    Movie reviews
+  <section class="space-y-6 pt-6">
+    <div>
+    <h2 class="text-lg font-semibold">Chungking Express (1994)</h2>
+      <span class="text-sm opacity-95">Dec 12, 2024</span>
+    </div>
+    <p>
+      It's a movie completely about the vibes. And I know that's Wong Kar-wai's speciality and this is how I was introduced to it. It tells a story of two cops falling in love, one for a mysterious woman and the other for an ethereal fast-food server. It felt kind of like the vibe that Past Lives and Aftersun gave plus the movie's own vibe. I'll probably try another one of Wong Kar-wai movies.
+    </p>
   </section>
 </Base>
