movie review: fallen angels (1995)

--- a/src/pages/movies/index.astro
+++ b/src/pages/movies/index.astro
@@ -16,8 +16,15 @@ const title = "Movies | SamIsTheFBI"
   </section>
   <section class="space-y-6 pt-6">
     <div>
+    <h2 class="text-lg font-semibold">Fallen Angels (1995)</h2>
+      <span class="text-sm opacity-95">Dec 15, 2024 23:36</span>
+    </div>
+    <p>
+      I could copy-paste a lot of what I wrote for Chungking Express review here because honestly in my opinion, these two share the same formula. Two stories told in pieces, one having that underworld killer vibe to it, the other being of a carefree kids at night vibe. Idk if that even makes any sense. To sum it up, I enjoyed parts of the movie but not all of it.
+    </p>
+    <div>
     <h2 class="text-lg font-semibold">Chungking Express (1994)</h2>
-      <span class="text-sm opacity-95">Dec 12, 2024</span>
+      <span class="text-sm opacity-95">Dec 15, 2024 00:30</span>
     </div>
     <p>
       It's a movie completely about the vibes. And I know that's Wong Kar-wai's speciality and this is how I was introduced to it. It tells a story of two cops falling in love, one for a mysterious woman and the other for an ethereal fast-food server. It felt kind of like the vibe that Past Lives and Aftersun gave plus the movie's own vibe. I'll probably try another one of Wong Kar-wai movies.
