--- a/src/components/home/Links.astro
+++ b/src/components/home/Links.astro
@@ -1,6 +1,6 @@
 ---
 import { FaGithub, FaLinkedin, FaXTwitter, FaEnvelope } from "react-icons/fa6";
-import { SiMyanimelist } from "react-icons/si";
+import { SiMyanimelist, SiLetterboxd } from "react-icons/si";
 ---
 
 <span class="sr-only">Here are links for</span>
@@ -23,6 +23,10 @@ import { SiMyanimelist } from "react-icons/si";
 <a target="_blank" href="https://myanimelist.net/profile/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <SiMyanimelist />
   <span class="sr-only">MyAnimeList</span>
+</a>
+<a target="_blank" href="https://letterboxd.com/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
+  <SiLetterboxd />
+  <span class="sr-only">Letterboxd</span>
 </a>
 <!-- 
 <a target="_blank" href="https://www.instagram.com/samisthefbi/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
