--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const title = "Home | SamIsTheFBI"
       </div>
     </div>
     <p>
-      I'm a 21yo CS undergrad student. My interests lie in <span class="font-semibold">web development, UNIX-like systems, shell scripting</span> and <span class="font-semibold">drawing</span>.
+      I'm a 22yo CS undergrad student. My interests lie in <span class="font-semibold">web development, UNIX-like systems, shell scripting</span> and <span class="font-semibold">drawing</span>.
     </p>
     <p>
       Beyond my studies, I enjoy participating in hackathons and working on various projects. In my free time, I also like tweaking my linux, watching movies, or playing video games.
@@ -93,7 +93,7 @@ const title = "Home | SamIsTheFBI"
     <p>
       Check my resume here.
     </p>
-    <div class="relative pattern w-full aspect-video overflow-hidden rounded-lg group transition-all">
+    <div class="relative pattern w-full aspect-video overflow-hidden rounded-lg group transition-all select-none">
       <div class="backdrop-blur-xs h-full w-full flex flex-col items-center justify-center group-hover:brightness-50">
         <h2 class="text-3xl sm:text-6xl tracking-tighter font-bold text-primary dark:text-background">Shivam Shekhar Soy</h2>
         <p class="text-xl sm:text-3xl tracking-tighter font-bold text-primary dark:text-background">Fullstack Developer</p>
