--- a/src/pages/movies/index.astro
+++ b/src/pages/movies/index.astro
@@ -16,6 +16,20 @@ const title = "Movies | SamIsTheFBI"
   </section>
   <section class="space-y-6 pt-6">
     <div>
+    <h2 class="text-lg font-semibold">The Dark Knight (2008)</h2>
+      <span class="text-sm opacity-95">Dec 28, 2024</span>
+    </div>
+    <p>
+      The best Batman movie. This is also the beginning of really cool starting scene of Nolan&apos;s Batman movies. Also, builds up a lot on Bruce Wayne&apos;s character which I think not a lot of superhero movies do well.
+    </p>
+    <div>
+      <h2 class="text-lg font-semibold">Batman Begins (2005) <span class="text-sm text-muted-foreground">(rewatch)</span></h2>
+      <span class="text-sm opacity-95">Dec 27, 2024</span>
+    </div>
+    <p>
+      I&apos;m biased with Nolan&apos;s Batman movies, so long story short, I love this movie. Maybe not as much as its sequel but still does one of the best superhero introduction. The fights in the movie look very very superficial, not like Power Rangers but like not as good as other superhero movies, say, Captain America: Civil War fights.  
+    </p>
+    <div>
     <h2 class="text-lg font-semibold">Fallen Angels (1995)</h2>
       <span class="text-sm opacity-95">Dec 15, 2024 23:36</span>
     </div>
