--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,7 +88,7 @@ const title = "Home | SamIsTheFBI"
       <MarqueeSkills client:only="react" />
     </div>
     <p>
-      I'm currently looking for a new opportunity to work on exciting projects. I am open to both full-time and part-time roles. 
+      Always on a lookout for an opportunity to work on exciting projects. I am open to both full-time and part-time roles. You can contact me preferably through my email and X/Twitter account.
     </p>
     <p>
       Check my resume here.
