update tech i use

--- a/src/pages/uses/index.astro
+++ b/src/pages/uses/index.astro
@@ -12,31 +12,32 @@ const title = "Uses | SamIsTheFBI"
   <section class="space-y-6 pt-6">
     <div class="space-y-2">
       <h2 class="text-lg sm:text-xl font-semibold tracking-tighter">Gear</h2>
-      <ul class="list-disc list-outside ml-4">
+      <ul class="list-disc list-outside ml-4 space-y-2">
         <li>
-          For my laptop, I use <a href="https://www.amazon.in/HP-15-6-inches-Micro-Edge-Anti-Glare-15s-eq2182AU/dp/B0B4N77Y34" class="link">HP 15s-eq2182AU</a> (16GB RAM + 512GB SSD). It&apos;s
-          got Ryzen 5 5500U which coupled along with the 16 gigs of RAM is enough for
-          running good old low spec video games which I enjoy. It&apos;s also good enough 
-          for coding and watching TV shows or anime in 720p, side by side.
+          <b>Laptop</b>: <a href="https://www.amazon.in/HP-15-6-inches-Micro-Edge-Anti-Glare-15s-eq2182AU/dp/B0B4N77Y34" class="link">HP 15s-eq2182AU</a> <span class="text-sm text-muted-foreground">(16GB RAM + 512GB SSD).</span><br/>
+        It&apos;s got Ryzen 5 5500U which coupled along with the 16 gigs of RAM is enough for running most pre-2019 era video games which I enjoy.
         </li>
         <li>
-          My phone is an old <a href="https://www.amazon.in/Redmi-Display-Storage-4000mAH-Battery/dp/B07QMSBC8D" class="link">Redmi 7</a> (3GB+32GB). I use it for nothing more
+          <b>Smartphone</b>: <a href="https://www.amazon.in/Redmi-Display-Storage-4000mAH-Battery/dp/B07QMSBC8D" class="link">Redmi 7</a> <span class="text-sm text-muted-foreground">(3GB+32GB)</span><br />
+          My phone is old and the only reason I will change it is for 5G abilities. I use it for nothing more
           than phone calls, UPI payments & college stuff. And to occasionally play DS
           games on it.
         </li>
-<!--<li>
-          I gave in to IEMs and currently use <a href="https://conceptkart.com/products/kz-edx-pro-wired-iem?variant=39421778788426" class="link">KZ EDX Pro</a>. They sound great but I really wouldn&apos;t care if it wasn&apos;t the case since my lifestyle doesn&apos;t allow me easy access to lossless good quality audio. In fact, I bought these because my previous earphones which lasted me 5 years finally broke.
+        <li>
+          <b>IEMs</b>: <a href="https://conceptkart.com/products/kz-edx-pro-wired-iem?variant=39421778788426" class="link">KZ EDX Pro</a> and <a class="link" href="https://kz-audio.com/kz-castor.html">KZ Castor</a> <span class="text-sm text-muted-foreground">(Gray Improved Bass variant)</span><br />
+          I own two IEMs, . I got the former when my 5 years old Mi Basic earphones died on me, and the latter I got from a giveaway by YouTuber <a class="link font-medium no-underline" href="https://www.youtube.com/@TheHopelessGeek">TheHopelessGeek</a>. They sound great, Castor has a more bass-y feel to it and the EDX Pro feels much more balanced to me.
         </li>
         <li>
-          <a href="https://aulaindia.com/product/aula-f75-wireless-trio-mode-mechanical-gaming-keyboard-with-knob-ice-blue-reaper-switch-keyboard-f75iur/" class="link">Aula F75 (with Leobog Reaper switches)</a> became my first ever mechanical keyboard and I just love typing on it. What I don&apos;t like about it though is its customization software, it&apos;s straight up not good to use unlike the typing experience. Also some keycaps have different typeface which to say the least is very odd. It has got RGB lighting and it is just enough to not bother me.
-</li> -->
+          <b>Keyboard</b>: <a href="https://aulaindia.com/product/aula-f75-wireless-trio-mode-mechanical-gaming-keyboard-with-knob-ice-blue-reaper-switch-keyboard-f75iur/" class="link">Aula F75</a> <span class="text-sm text-muted-foreground">(Ice Blue variant with Leobog Reaper switches)</span><br />
+          My first ever mechanical keyboard and I just love typing on it. Its customization software is straight up not good to use, luckily I don&apos;t care about that. Also some keycaps have different typeface which to say the least is very odd. It has got South-facing RGB lighting which can be too bright if set so but again, I don&apos;t use it as much.
+        </li>
       </ul>
     </div>
     <div class="space-y-2">
       <h2 class="text-lg sm:text-xl font-semibold tracking-tighter">Laptop Software</h2>
       <ul class="list-disc list-outside ml-4">
         <li><b>OS</b>: Arch Linux + Windows 11</li>
-        <li><b>Window Manager</b>: dwm (patched a lot)</li>
+        <li><b>Window Manager</b>: dwm (patched a lot) <span class="text-muted-foreground text-sm">(planning to switch to Hyprland)</span></li>
         <li><b>Text Editor</b>: Neovim</li>
         <li><b>Terminal</b>: st (with bunch of patches)</li>
         <li><b>Browser</b>: Google Chrome</li>
