--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -125,6 +125,6 @@
     @apply bg-secondary-foreground/65 text-secondary
   }
   .link {
-    @apply font-semibold underline underline-offset-4 hover:decoration-primary decoration-primary/50
+    @apply font-medium underline underline-offset-4 hover:decoration-primary decoration-primary/50
   }
 }
