--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,10 +90,10 @@ const title = "Home | SamIsTheFBI"
     <p>
       Always on a lookout for an opportunity to work on exciting projects. I am open to both full-time and part-time roles. You can contact me preferably through my email and X/Twitter account.
     </p>
-    <p>
+    <p class="hidden">
       Check my resume here.
     </p>
-    <div class="relative pattern w-full aspect-video overflow-hidden rounded-lg group transition-all select-none">
+    <div class="relative pattern w-full aspect-video overflow-hidden rounded-lg group transition-all select-none hidden">
       <div class="backdrop-blur-xs h-full w-full flex flex-col items-center justify-center group-hover:brightness-50">
         <h2 class="text-3xl sm:text-6xl tracking-tighter font-bold text-primary dark:text-background">Shivam Shekhar Soy</h2>
         <p class="text-xl sm:text-3xl tracking-tighter font-bold text-primary dark:text-background">Fullstack Developer</p>
