--- a/src/pages/uses/index.astro
+++ b/src/pages/uses/index.astro
@@ -7,7 +7,7 @@ const title = "Uses | SamIsTheFBI"
 <Base title={title} description="Fancy home page">
   <section class="sm:mt-5">
     <h2 transition:name="uses_title" class="text-xl sm:text-2xl font-semibold tracking-tighter opacity-95">Uses</h2>
-    <p class="max-md:text-sm text-muted-foreground">tech that i use.</p>
+    <p class="max-md:text-sm text-muted-foreground">tech that i use. <a href="https://uses.tech/" target="_blank"><span class="text-xs">(inspired by various /uses pages)</span></a></p>
   </section>
   <section class="space-y-6 pt-6">
     <div class="space-y-2">
@@ -19,17 +19,16 @@ const title = "Uses | SamIsTheFBI"
         </li>
         <li>
           <b>Smartphone</b>: <a href="https://www.amazon.in/Redmi-Display-Storage-4000mAH-Battery/dp/B07QMSBC8D" class="link">Redmi 7</a> <span class="text-sm text-muted-foreground">(3GB+32GB)</span><br />
-          My phone is old and the only reason I will change it is for 5G abilities. I use it for nothing more
-          than phone calls, UPI payments & college stuff. And to occasionally play DS
-          games on it.
+          My phone is old and I will soon buy a new one with proper 5G support. For now, this works. I use it for nothing more
+          than phone calls, UPI payments & college stuff. And to occasionally play DS and GBA games on it.
         </li>
         <li>
-          <b>IEMs</b>: <a href="https://conceptkart.com/products/kz-edx-pro-wired-iem?variant=39421778788426" class="link">KZ EDX Pro</a> and <a class="link" href="https://kz-audio.com/kz-castor.html">KZ Castor</a> <span class="text-sm text-muted-foreground">(Gray Improved Bass variant)</span><br />
+          <b>IEMs</b>: <a href="https://conceptkart.com/products/kz-edx-pro-wired-iem?variant=39421778788426" class="link">KZ EDX Pro</a> and <a class="link" href="https://conceptkart.com/products/kz-castor-pro-dual-dynamic-driver-iem?variant=41749015920714">KZ Castor</a> <span class="text-sm text-muted-foreground">(Gray Improved Bass variant)</span><br />
           I own two IEMs, . I got the former when my 5 years old Mi Basic earphones died on me, and the latter I got from a giveaway by YouTuber <a class="link font-medium no-underline" href="https://www.youtube.com/@TheHopelessGeek">TheHopelessGeek</a>. They sound great, Castor has a more bass-y feel to it and the EDX Pro feels much more balanced to me.
         </li>
         <li>
           <b>Keyboard</b>: <a href="https://aulaindia.com/product/aula-f75-wireless-trio-mode-mechanical-gaming-keyboard-with-knob-ice-blue-reaper-switch-keyboard-f75iur/" class="link">Aula F75</a> <span class="text-sm text-muted-foreground">(Ice Blue variant with Leobog Reaper switches)</span><br />
-          My first ever mechanical keyboard and I just love typing on it. Its customization software is straight up not good to use, luckily I don&apos;t care about that. Also some keycaps have different typeface which to say the least is very odd. It has got South-facing RGB lighting which can be too bright if set so but again, I don&apos;t use it as much.
+          My first ever mechanical keyboard and I just love typing on it. Its customization software is straight up not good to use, luckily I use my keyboard at its default. Also some keycaps have different typeface which to say the least is very odd. It has got South-facing RGB lighting which can be too bright if set so but again, I don&apos;t keep the RGB on.
         </li>
       </ul>
     </div>
@@ -37,9 +36,9 @@ const title = "Uses | SamIsTheFBI"
       <h2 class="text-lg sm:text-xl font-semibold tracking-tighter">Laptop Software</h2>
       <ul class="list-disc list-outside ml-4">
         <li><b>OS</b>: Arch Linux + Windows 11</li>
-        <li><b>Window Manager</b>: dwm (patched a lot) <span class="text-muted-foreground text-sm">(planning to switch to Hyprland)</span></li>
+        <li><b>Window Manager</b>: dwm <span class="text-muted-foreground text-sm">(planning to switch to Hyprland)</span></li>
         <li><b>Text Editor</b>: Neovim</li>
-        <li><b>Terminal</b>: st (with bunch of patches)</li>
+        <li><b>Terminal</b>: st</li>
         <li><b>Browser</b>: Google Chrome</li>
         <li><b>Video Player</b>: mpv</li>
       </ul>
@@ -52,7 +51,7 @@ const title = "Uses | SamIsTheFBI"
         <li><b>Productivity</b>: Keep Notes</li>
         <li><b>Music/YouTube</b>: Revanced Extended</li>
         <li><b>Browser</b>: Google Chrome / 1DM+</li>
-        <li><b>Video Player</b>: VLC</li>
+        <li><b>Media Player</b>: VLC</li>
       </ul>
     </div>
     <div class="space-y-2">
