--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const title = "Home | SamIsTheFBI"
       </div>
     </div>
     <p>
-      I'm a 22yo CS undergrad student. My interests lie in <span class="font-semibold">web development, UNIX-like systems, shell scripting</span> and <span class="font-semibold">drawing</span>.
+      I'm a 22yo CS undergrad. My interests lie in <span class="font-semibold">web development, UNIX-like systems, shell scripting</span> and <span class="font-semibold">drawing</span>.
     </p>
     <p>
       Beyond my studies, I enjoy participating in hackathons and working on various projects. In my free time, I also like tweaking my linux, watching movies, or playing video games.
