--- a/src/pages/uses/index.astro
+++ b/src/pages/uses/index.astro
@@ -15,16 +15,19 @@ const title = "Uses | SamIsTheFBI"
       <ul class="list-disc list-outside ml-4 space-y-2">
         <li>
           <b>Laptop</b>: <a href="https://www.amazon.in/HP-15-6-inches-Micro-Edge-Anti-Glare-15s-eq2182AU/dp/B0B4N77Y34" class="link">HP 15s-eq2182AU</a> <span class="text-sm text-muted-foreground">(16GB RAM + 512GB SSD).</span><br/>
-        It&apos;s got Ryzen 5 5500U which coupled along with the 16 gigs of RAM is enough for running most pre-2019 era video games which I enjoy.
+          It&apos;s got Ryzen 5 5500U which coupled along with the 16 gigs of RAM is enough for running most pre-2019 era video games which I enjoy. Although, recently it's started to heat up pretty quickly which is a big bummer.
         </li>
         <li>
-          <b>Smartphone</b>: <a href="https://www.amazon.in/Redmi-Display-Storage-4000mAH-Battery/dp/B07QMSBC8D" class="link">Redmi 7</a> <span class="text-sm text-muted-foreground">(3GB+32GB)</span><br />
-          My phone is old and I will soon buy a new one with proper 5G support. For now, this works. I use it for nothing more
-          than phone calls, UPI payments & college stuff. And to occasionally play DS and GBA games on it.
+          <b>Smartphone</b>: 
+          <a href="https://www.flipkart.com/realme-p3-5g-space-silver-128-gb/p/itm69060f73d27e8?pid=MOBHAYN5SGFFG88U&lid=LSTMOBHAYN5SGFFG88UIOKMGU&marketplace=FLIPKART&sattr[]=color&sattr[]=storage&sattr[]=ram&st=ram" class="link">
+            Realme P3 5G
+          </a> 
+          <span class="text-sm text-muted-foreground">(8GB+128GB)</span><br />
+          I finally got a 5G supported smartphone. Just like my older <a href="https://www.amazon.in/Redmi-Display-Storage-4000mAH-Battery/dp/B07QMSBC8D" class="link">Redmi 7</a>, I use it for phone calls, UPI payments & college stuff, along with playing any multiplayer game my friends are into.
         </li>
         <li>
           <b>IEMs</b>: <a href="https://conceptkart.com/products/kz-edx-pro-wired-iem?variant=39421778788426" class="link">KZ EDX Pro</a> and <a class="link" href="https://conceptkart.com/products/kz-castor-pro-dual-dynamic-driver-iem?variant=41749015920714">KZ Castor</a> <span class="text-sm text-muted-foreground">(Gray Improved Bass variant)</span><br />
-          I own two IEMs, . I got the former when my 5 years old Mi Basic earphones died on me, and the latter I got from a giveaway by YouTuber <a class="link font-medium no-underline" href="https://www.youtube.com/@TheHopelessGeek">TheHopelessGeek</a>. They sound great, Castor has a more bass-y feel to it and the EDX Pro feels much more balanced to me.
+          I own two IEMs. I got the former when my 5 years old Mi Basic earphones died on me, and the latter I got from a giveaway by YouTuber <a class="link font-medium no-underline" href="https://www.youtube.com/@TheHopelessGeek">TheHopelessGeek</a>. They sound great, Castor has a more bass-y feel to it and the EDX Pro feels much more balanced to me.
         </li>
         <li>
           <b>Keyboard</b>: <a href="https://aulaindia.com/product/aula-f75-wireless-trio-mode-mechanical-gaming-keyboard-with-knob-ice-blue-reaper-switch-keyboard-f75iur/" class="link">Aula F75</a> <span class="text-sm text-muted-foreground">(Ice Blue variant with Leobog Reaper switches)</span><br />
@@ -36,7 +39,7 @@ const title = "Uses | SamIsTheFBI"
       <h2 class="text-lg sm:text-xl font-semibold tracking-tighter">Laptop Software</h2>
       <ul class="list-disc list-outside ml-4">
         <li><b>OS</b>: Arch Linux + Windows 11</li>
-        <li><b>Window Manager</b>: dwm <span class="text-muted-foreground text-sm">(planning to switch to Hyprland)</span></li>
+        <li><b>Window Manager</b>: dwm <span class="text-muted-foreground text-sm">(still strong with xorg for circular scrolling!)</span></li>
         <li><b>Text Editor</b>: Neovim</li>
         <li><b>Terminal</b>: st</li>
         <li><b>Browser</b>: Google Chrome</li>
@@ -46,10 +49,10 @@ const title = "Uses | SamIsTheFBI"
     <div class="space-y-2">
       <h2 class="text-lg sm:text-xl font-semibold tracking-tighter">Phone Software</h2>
       <ul class="list-disc list-outside ml-4">
-        <li><b>OS</b>: Android 10 / MIUI 11.0.4</li>
+        <li><b>OS</b>: Android 15 / realmeUI 6.0</li>
         <li><b>Launcher</b>: OLauncher</li>
         <li><b>Productivity</b>: Keep Notes</li>
-        <li><b>Music/YouTube</b>: Revanced Extended</li>
+        <li><b>Music/YouTube</b>: Revanced YouTube</li>
         <li><b>Browser</b>: Google Chrome / 1DM+</li>
         <li><b>Media Player</b>: VLC</li>
       </ul>
