--- a/src/components/home/Links.astro
+++ b/src/components/home/Links.astro
@@ -1,32 +1,36 @@
 ---
 import { FaGithub, FaLinkedin, FaXTwitter, FaEnvelope } from "react-icons/fa6";
-import { SiMyanimelist, SiLetterboxd } from "react-icons/si";
+import { SiMyanimelist, SiLetterboxd, SiSteam } from "react-icons/si";
 ---
 
 <span class="sr-only">Here are links for</span>
 <a target="_blank" href="https://github.com/samisthefbi/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaGithub />
-  <span class="sr-only">Github Link</span>
+  <span class="sr-only">Github Profile Link</span>
 </a>
 <a target="_blank" href="https://www.linkedin.com/in/shivam-shekhar-soy/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaLinkedin />
-  <span class="sr-only">Linkedin Link</span>
+  <span class="sr-only">Linkedin Profile Link</span>
 </a>
 <a target="_blank" href="https://twitter.com/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaXTwitter />
-  <span class="sr-only">Twitter/X Link</span>
+  <span class="sr-only">Twitter/X Profile Link</span>
 </a>
 <a target="_blank" href="mailto:shivamshekharsoy@gmail.com" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaEnvelope />
-  <span class="sr-only">Email address</span>
+  <span class="sr-only">Email Address</span>
 </a>
 <a target="_blank" href="https://myanimelist.net/profile/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <SiMyanimelist />
-  <span class="sr-only">MyAnimeList</span>
+  <span class="sr-only">MyAnimeList Profile Link</span>
 </a>
 <a target="_blank" href="https://letterboxd.com/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <SiLetterboxd />
-  <span class="sr-only">Letterboxd</span>
+  <span class="sr-only">Letterboxd Profile Link</span>
+</a>
+<a target="_blank" href="https://letterboxd.com/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
+  <SiSteam />
+  <span class="sr-only">Steam Profile Link</span>
 </a>
 <!-- 
 <a target="_blank" href="https://www.instagram.com/samisthefbi/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
